--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev": "tsx watch src/server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -11,5 +12,9 @@
   "license": "ISC",
   "dependencies": {
     "fastify": "^4.11.0"
+  },
+  "devDependencies": {
+    "tsx": "^3.12.2",
+    "typescript": "^4.9.4"
   }
 }
